tests/baselines/reference/primitiveMembers.errors.txt
tests/cases/compiler/primitiveMembers.ts(5,3): error TS2339: Property 'toBAZ' does not exist on type 'number'.
tests/cases/compiler/primitiveMembers.ts(11,1): error TS2322: Type 'Number' is not assignable to type 'number'.
  'number' is a primitive, but 'Number' is a wrapper object. Prefer using 'number' when possible.


==== tests/cases/compiler/primitiveMembers.ts (2 errors) ====
    var x = 5;
    var r = /yo/;
    r.source;
    
    x.toBAZ();
      ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'number'.
    x.toString();
    
    var n = 0;
    var N: Number;
    
    n = N;  // should not work, as 'number' has a different brand
    ~
!!! error TS2322: Type 'Number' is not assignable to type 'number'.
!!! error TS2322:   'number' is a primitive, but 'Number' is a wrapper object. Prefer using 'number' when possible.
    N = n; // should work
    
    var o: Object = {}
    var f: Function = (x: string) => x.length;
    var r2: RegExp = /./g;
    var n2: Number = 34;
    var s: String = "yo";
    var b: Boolean = true;
    
    var n3 = 5 || {};
    
    
    class baz { public bar(): void { }; }
    class foo extends baz { public bar(){ return undefined}; }
    
    
    
     
    
    